--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
 # Set app name.
-set(APP_NAME Demo)
+set(APP_NAME live2d)
 # Set directory paths.
 set(SDK_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp)
 set(CORE_PATH ${SDK_ROOT_PATH}/Core)
