--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,6 @@
 include ':Demo'
 project(':Demo').projectDir = new File(settingsDir, 'app')
+
+include ':opencv'
+project(':opencv').projectDir = new File("F:\\opencv\\", 'sdk')
+
