--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.1.73.android'
     implementation 'com.google.mediapipe:solution-core:latest.release'
     implementation 'com.google.mediapipe:facemesh:latest.release'
-    //implementation project(path: ':opencv')
+    implementation project(path: ':renderscript-toolkit')
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
 }
