--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,12 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <uses-feature
-            android:glEsVersion="0x00020000"
+            android:glEsVersion="0x00030000"
             android:required="true"/>
 
     <application
@@ -17,6 +20,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
+            android:largeHeap="true"
             android:theme="@style/AppTheme">
         <activity
                 android:name="com.coloryr.facetrack.MainActivity"
@@ -28,6 +32,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <service
+                android:name=".socket.ConnectService">
+        </service>
+        <receiver android:name=".socket.ServiceBroadcastReceiver"
+                  android:exported="false">
+            <intent-filter >
+                <action android:name="Live2dStart"/>
+<!--                <action android:name="Live2dStop" />-->
+            </intent-filter>
+        </receiver>
         <meta-data android:name="com.google.ar.core" android:value="required" />
     </application>
 
