--- a/L2d_Desktop/L2d_Desktop/L2d_Desktop.csproj
+++ b/L2d_Desktop/L2d_Desktop/L2d_Desktop.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="DotNetty.Codecs" Version="0.7.2" />
     <PackageReference Include="DotNetty.Transport" Version="0.7.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="OpenTK" Version="4.7.1" />
     <PackageReference Include="SharpAdbClient" Version="2.3.23" />
     <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
