--- a/L2d_Desktop/L2d_Desktop/L2d_Desktop.csproj
+++ b/L2d_Desktop/L2d_Desktop/L2d_Desktop.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Live2d_For_WPF\Live2d_Lib\Live2d_Lib.vcxproj" />
     <ProjectReference Include="..\VCam\VCam.csproj" />
   </ItemGroup>
 
