--- a/L2d_Desktop/Live2d_glew_s/Live2d_glew_s.vcxproj.filters
+++ b/L2d_Desktop/Live2d_glew_s/Live2d_glew_s.vcxproj.filters
@@ -31,7 +31,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="src\glew\build\glew.rc">
+    <ResourceCompile Include="src\glew\glew.rc">
       <Filter>资源文件</Filter>
     </ResourceCompile>
   </ItemGroup>
