--- a/L2d_App/app/build.gradle
+++ b/L2d_App/app/build.gradle
@@ -64,7 +64,9 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.1.73.android'
     implementation 'com.google.mediapipe:solution-core:latest.release'
     implementation 'com.google.mediapipe:facemesh:latest.release'
+    implementation 'com.google.mediapipe:facedetection:latest.release'
     implementation 'io.netty:netty-all:4.1.74.Final'
+    implementation 'com.huawei.hms:arenginesdk:3.7.0.3'
     implementation project(path: ':renderscript-toolkit')
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
 }
