--- a/L2d_App/build.gradle
+++ b/L2d_App/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {url "https://developer.huawei.com/repo/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,6 +19,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {url "https://developer.huawei.com/repo/" }
     }
 }
 
