--- a/L2d_App/app/build.gradle
+++ b/L2d_App/app/build.gradle
@@ -48,9 +48,12 @@ android {
         viewBinding true
     }
 }
+repositories {
+    mavenCentral()
+}
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: '../libs', include: ['mediapipe_face_effect.aar'])
     implementation 'com.google.ar:core:1.30.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -64,13 +67,8 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.1.73.android'
     implementation 'com.google.mediapipe:solution-core:latest.release'
     implementation 'com.google.mediapipe:facemesh:latest.release'
-    implementation 'com.google.mediapipe:facedetection:latest.release'
     implementation 'io.netty:netty-all:4.1.74.Final'
     implementation 'com.huawei.hms:arenginesdk:3.7.0.3'
     implementation project(path: ':renderscript-toolkit')
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
-}
-
-repositories {
-    mavenCentral()
 }
