--- a/L2d_App/app/build.gradle
+++ b/L2d_App/app/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+}
 
 android {
     compileSdkVersion PROP_COMPILE_SDK_VERSION.toInteger()
@@ -61,13 +64,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.4.2'
-    implementation 'androidx.navigation:navigation-ui:2.4.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'com.alibaba:fastjson:1.1.73.android'
     implementation 'com.google.mediapipe:solution-core:latest.release'
     implementation 'com.google.mediapipe:facemesh:latest.release'
-    implementation 'io.netty:netty-all:4.1.74.Final'
+    implementation 'io.netty:netty-all:4.1.76.Final'
     implementation 'com.huawei.hms:arenginesdk:3.7.0.3'
     implementation project(path: ':renderscript-toolkit')
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
