--- a/L2d_App/gradle.properties
+++ b/L2d_App/gradle.properties
@@ -32,5 +32,5 @@ PROP_TARGET_SDK_VERSION=30
 # To build for multiple architexture, use the `:` between them
 # Example - PROP_APP_ABI=armeabi-v7a:arm64-v8a:x86
 #PROP_APP_ABI=x86_64
-PROP_APP_ABI=armeabi-v7a:arm64-v8a
+PROP_APP_ABI=arm64-v8a
 #PROP_APP_ABI=armeabi-v7a:arm64-v8a:x86:x86_64
